--- a/TaskManager.DesktopClient/Resources/Styles/MainStyleDictionaty.xaml
+++ b/TaskManager.DesktopClient/Resources/Styles/MainStyleDictionaty.xaml
@@ -131,4 +131,13 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="White"/>
     </Style>
+    <Style TargetType="Border" x:Key="ProjectPanelBorder">
+        <Setter Property="Background" Value="Black"/>
+        <Setter Property="Margin" Value="10"/>
+        <Setter Property="Padding" Value="10"/>
+        <Setter Property="BorderThickness" Value="0.4"/>
+        <Setter Property="BorderBrush" Value="White"/>
+        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="MinWidth" Value="250"/>
+    </Style>
 </ResourceDictionary>
